# bert.c

./: CMakeLists.txt  Makefile  README.md  TODO.md  \  bert.c  bertc.h  bertc_benchmark.cc  test_bert.c
examples/: bert_pytorch.py
